--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         // Function to open the resume PDF in a new tab
         function openResume() {
-            window.open("/src/assets/Ghousia_Resume2025.pdf", "_blank");
+            window.open("/Ghousia_Resume2025.pdf", "_blank");
         }
 
         // Function to show success/error message for the form
