--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <i class="bi bi-person-badge fs-1 text-white mb-3"></i>
                             <h5 class="text-white mb-3">Portfolio Website</h5>
                             <p class="text-light mb-3">Personal portfolio (HTML, CSS, JS). Features responsive design, smooth navigation, and interactive UI.</p>
-                            <a href="https://ghousiadreams.github.io/ghousia-portfolio-bloom/" target="_blank" class="btn btn-outline-light" aria-label="View portfolio project">View Project</a>
+                            <a href="https://ghousia-portfolio.vercel.app/" target="_blank" class="btn btn-outline-light" aria-label="View portfolio project">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                             <i class="bi bi-key fs-1 text-white mb-3"></i>
                             <h5 class="text-white mb-3">Random Password Generator</h5>
                             <p class="text-light mb-3">Built in Java during internship. Secure password generator with customizable length and complexity.</p>
-                            <a href="https://ghousia.github.io/random-password-generator/" target="_blank" class="btn btn-outline-light" aria-label="View Password Generator project">View Project</a>
+                            <a href="#" class="btn btn-outline-light" aria-label="View Password Generator project">View Project</a>
                         </div>
                     </div>
                 </div>
